--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.16.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
     "eslint": "^9.16.0",
@@ -22,8 +23,10 @@
     "typescript-eslint": "^8.17.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.8.4"
+    "mongoose": "^8.8.4",
+    "zod": "^3.24.1"
   }
 }
