--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "_version": "22.0.0",
 
   "compilerOptions": {
+    "baseUrl": "src/",
     "lib": ["es2023"],
     "module": "node16",
     "target": "es2022",
@@ -13,6 +14,6 @@
     "skipLibCheck": true,
     "moduleResolution": "node16"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*","src/types"],
   "exclude": ["node_modules"]
 }
